2002-06-29  Sam Steingold  <sds@gnu.org>

	implemented feature request [ 575303 ]: quit to top-level in debugger
	* reploop.lisp (debug-quit): new function
	(commands1): document `Quit/:q'
	(break-loop, step-hook-fn): handle it (as `abort-to-top')
	* control.d (UNWIND-TO-TOP): new function
	* constsym.d, subr.d (unwind_to_top): ditto

2002-06-28  Sam Steingold  <sds@gnu.org>

	* configure: work around the ulimit bug in cygwin /bin/sh

2002-06-28  Sam Steingold  <sds@gnu.org>

	* lispbibl.d (alloca) [UNIX_CYGWIN32]: already defined in <alloca.h>

2002-06-27  Sam Steingold  <sds@gnu.org>

	fixed Sparc/Linux glibc 2.2 --with-debug build
	* lispbibl.d (oint_type_*, oint_data_*) [SPARC UNIX_LINUX]:
	do special handling only for glibc 2.1 and earlier

2002-06-27  Sam Steingold  <sds@gnu.org>

	* configure: check stack limit and suggest ulimit when printing
	further recommendations and call ulimit before make

2002-06-26  Sam Steingold  <sds@gnu.org>

	* lispbibl.d: separate `chart' and `object'
	(object, as_oint, as_object) [OBJECT_STRUCT]: `one' --> `one_o'
	(chart, as_cint, as_chart) [CHART_STRUCT]: `one' --> `one_c'
	* stream.d (stream_reset_eltype): compare ch with LF properly
	* array.d (make_storagevector): use char_int(), not as_cint(), to
	convert an object to `cint'
	* spvw_mark.d (mark, unmark): object slot is `one_o'

2002-06-26  Sam Steingold  <sds@gnu.org>

	* m4/general.m4 (CL_CANONICAL_HOST_CPU)
	(CL_CANONICAL_HOST_CPU_FOR_FFCALL): handle hppa64
	the same way as hppa1 and hppa2
	Suggested by Will Newton <will@misconception.org.uk>

2002-06-25  Sam Steingold  <sds@gnu.org>

	memcpy() & begin/end_system_call() cleanup
	* lispbibl.d (copy_mem_b, copy_mem_o): new macros
	(do_cclosure_copy): use copy_mem_o()
	* hashtabl.d (%SET-HASH-TABLE-WEAK-P): use copy_mem_o()
	instead of memcpy()
	* record.d (COPY-STRUCTURE): ditto
	* stream.d (read_byte_array_buffered, write_byte_array_buffered)
	(READ-FLOAT, WRITE-FLOAT): use copy_mem_b() instead of memcpy()