@@ -1,3 +1,8 @@
+2002-07-01  Sam Steingold  <sds@gnu.org>
+
+	* makemake.in (echotab_mkdir_maybe): pass `-p' to mkdir(1)
+	(shared): new make var; create it before doc dirs
+
 2002-06-29  Sam Steingold  <sds@gnu.org>
 
 	implemented feature request [ 575303 ]: quit to top-level in debugger
